2003-10-21 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* mk/common.mk: Avoid message about several rules for the
	top-level file which are .chs files. This happend since the
	top-level file SourceView.chs is not removed form a list
	containing ./SourceView.chs which is what the wild-card searching
	gives. Solved by stripping the ./ prefix.
	
	* gtk/Makefile, tools/signals/HookGenerator.hs,
	tools/signals/Makefile, tools/signals/Signal.chs-boot1,
	tools/signals/Signal.chs-boot2, tools/signals/gtkmarshal.list,
	tools/typehier/Makefile, tools/typehier/TypeGenerator.hs,
	tools/typehier/hierarchy.list: Moved these file to a new directory
	tools/. The reason for this is that parts of the type hierarchy
	may only be generated if a specific widget is built, in this case
	it's GtkSourceview.
	
	* gtk/multiline/TextBuffer.chs: Use TextBufferClass tb => tb
	instead of TextBuffer as type for the Textbuffer.
	
	* gtk/abstract/Container.chs, gtk/multiline/TextIter.chs: Fix
	warning about deprecated FFI construct for GHC 6.0.

2003-08-09  Jens Petersen  <petersen@haskell.org>

	* gtk/multiline/TextView.chs (textViewGetVisibleRect): Fix docu typo.

2003-08-02  Jens Petersen  <petersen@haskell.org>

	* gtk/multiline/TextBuffer.chs (textBufferGetCharCount): Call
	text_buffer_get_char_count not text_buffer_get_line_count.

2003-07-31  Jens Petersen  <petersen@haskell.org>

	* gtk2hs.spec.in: Default to ghc-6.0.1.
	(%files): Include demo as dir in docs rather than individual
	source files.

	* Makefile (inplace): Do not build the demos by default.
	(noinplace): Ditto.
	(demo): New separate target to build demos.
	(install*): Drop no-op for demos.
	(uninstall): Ditto.

2003-07-18 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* VERSION: Bumped to 0.9.4, prepare to do a ghc-6.0 release.
	
	* mk/common.mk: Make hsc2hs pass -no-hs-main to ghc when linking.
	This avoids an undefined symbol error for the Haskell main
	function on Apple and Solaris.

	* gtk/Makefile: Added the header file for gdk-pixbuf.
